--- a/Frontend/src/index.css
+++ b/Frontend/src/index.css
@@ -1,4 +1,7 @@
-@tailwind base;
+@import "tailwindcss";
+/* @tailwind base;
 @tailwind components;
-@tailwind utilities;
+@tailwind utilities; */
+
+
 
